--- a/LogViewResources.qrc
+++ b/LogViewResources.qrc
@@ -1,6 +1,3 @@
 <RCC>
-    <qresource prefix="/apps">
-        <file>res/7z.dll</file>
-        <file>res/7z.exe</file>
-    </qresource>
+    <qresource prefix="/apps"/>
 </RCC>
