--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -106,6 +106,121 @@
        </widget>
       </item>
       <item>
+       <widget class="QGroupBox" name="gbServices">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="title">
+         <string>Services</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QLabel" name="lServiceCAL">
+             <property name="text">
+              <string>CAL</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbCALStart">
+             <property name="text">
+              <string>&gt;</string>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>12</width>
+               <height>12</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbCALStop">
+             <property name="text">
+              <string>|</string>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>12</width>
+               <height>12</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbCALRestart">
+             <property name="text">
+              <string>|&gt;</string>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>12</width>
+               <height>12</height>
+              </size>
+             </property>
+             <property name="arrowType">
+              <enum>Qt::NoArrow</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
+           <item>
+            <widget class="QLabel" name="lServiceArgesFW">
+             <property name="text">
+              <string>Arges FW</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbFWStart">
+             <property name="text">
+              <string>&gt;</string>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>12</width>
+               <height>12</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbFWStop">
+             <property name="text">
+              <string>|</string>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>12</width>
+               <height>12</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="tbFWRestart">
+             <property name="text">
+              <string>|&gt;</string>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>12</width>
+               <height>12</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
        <widget class="QGroupBox" name="gbLogFilter">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -308,6 +423,11 @@
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionCALStart">
+   <property name="icon">
+    <iconset>
+     <normalon>:/icons/icons/service_start.png</normalon>
+    </iconset>
+   </property>
    <property name="text">
     <string>Start</string>
    </property>
@@ -316,6 +436,10 @@
    </property>
   </action>
   <action name="actionCALStop">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/service_stop.png</normaloff>:/icons/icons/service_stop.png</iconset>
+   </property>
    <property name="text">
     <string>Stop</string>
    </property>
@@ -324,6 +448,10 @@
    </property>
   </action>
   <action name="actionCALRestart">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/service_restart.png</normaloff>:/icons/icons/service_restart.png</iconset>
+   </property>
    <property name="text">
     <string>Restart</string>
    </property>
@@ -340,6 +468,10 @@
    </property>
   </action>
   <action name="actionFWStart">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/service_start.png</normaloff>:/icons/icons/service_start.png</iconset>
+   </property>
    <property name="text">
     <string>Start</string>
    </property>
@@ -348,6 +480,10 @@
    </property>
   </action>
   <action name="actionFWStop">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/service_stop.png</normaloff>:/icons/icons/service_stop.png</iconset>
+   </property>
    <property name="text">
     <string>Stop</string>
    </property>
@@ -356,6 +492,10 @@
    </property>
   </action>
   <action name="actionFWRestart">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/service_restart.png</normaloff>:/icons/icons/service_restart.png</iconset>
+   </property>
    <property name="text">
     <string>Restart</string>
    </property>
@@ -408,7 +548,9 @@
    </slots>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>leHost</sender>
@@ -449,8 +591,8 @@
    <slot>setErrorLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>864</x>
-     <y>198</y>
+     <x>987</x>
+     <y>293</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -465,8 +607,8 @@
    <slot>setWarningLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>886</x>
-     <y>224</y>
+     <x>987</x>
+     <y>318</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -481,8 +623,8 @@
    <slot>setInfoLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>906</x>
-     <y>249</y>
+     <x>987</x>
+     <y>343</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -497,8 +639,8 @@
    <slot>setStateMachineLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>922</x>
-     <y>273</y>
+     <x>987</x>
+     <y>368</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -513,8 +655,8 @@
    <slot>setSoapOutLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>929</x>
-     <y>324</y>
+     <x>987</x>
+     <y>418</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -529,8 +671,8 @@
    <slot>setSoapInLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>939</x>
-     <y>299</y>
+     <x>987</x>
+     <y>393</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -545,8 +687,8 @@
    <slot>setDebugLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>953</x>
-     <y>349</y>
+     <x>987</x>
+     <y>443</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -561,8 +703,8 @@
    <slot>setNonCalLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>969</x>
-     <y>372</y>
+     <x>987</x>
+     <y>468</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -593,12 +735,12 @@
    <slot>click()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>977</x>
-     <y>426</y>
+     <x>987</x>
+     <y>530</y>
     </hint>
     <hint type="destinationlabel">
-     <x>975</x>
-     <y>449</y>
+     <x>986</x>
+     <y>558</y>
     </hint>
    </hints>
   </connection>
@@ -609,8 +751,8 @@
    <slot>clearAllMarkers()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>892</x>
-     <y>452</y>
+     <x>916</x>
+     <y>558</y>
     </hint>
     <hint type="destinationlabel">
      <x>806</x>
