--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1004</width>
-    <height>708</height>
+    <height>815</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -99,6 +99,41 @@
           <widget class="QPushButton" name="pbConnect">
            <property name="text">
             <string>Connect</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="gbFemtecTester">
+        <property name="title">
+         <string>FemtecTester</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_6">
+         <item>
+          <widget class="QPushButton" name="pbProcedureFS">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="autoFillBackground">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Procedure Footswitch</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="cbTesterEnabled">
+           <property name="text">
+            <string>Enable FemtecTester</string>
            </property>
           </widget>
          </item>
@@ -380,12 +415,20 @@
              <property name="text">
               <string>Clear</string>
              </property>
+             <property name="icon">
+              <iconset resource="icons.qrc">
+               <normaloff>:/icons/icons/trash.png</normaloff>:/icons/icons/trash.png</iconset>
+             </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pbAddMarker">
              <property name="text">
               <string>Add</string>
+             </property>
+             <property name="icon">
+              <iconset resource="icons.qrc">
+               <normaloff>:/icons/icons/action_add.png</normaloff>:/icons/icons/action_add.png</iconset>
              </property>
             </widget>
            </item>
@@ -420,7 +463,7 @@
      <x>0</x>
      <y>0</y>
      <width>1004</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -459,18 +502,23 @@
     <addaction name="menuCAL"/>
     <addaction name="menuArges_Firmware"/>
    </widget>
+   <widget class="QMenu" name="menuFemtec_Tester">
+    <property name="title">
+     <string>Femtec Tester</string>
+    </property>
+    <addaction name="actionFemtecTesterEnabled"/>
+    <addaction name="separator"/>
+    <addaction name="actionFemtecTesterSettings"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuServices"/>
+   <addaction name="menuFemtec_Tester"/>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
+  <widget class="QStatusBar" name="statusBar">
+   <property name="sizeGripEnabled">
     <bool>false</bool>
-   </attribute>
+   </property>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionCALStart">
    <property name="icon">
     <iconset>
@@ -570,6 +618,25 @@
     <string>Query Arges Firmware Status</string>
    </property>
   </action>
+  <action name="actionFemtecTesterEnabled">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Enabled</string>
+   </property>
+  </action>
+  <action name="actionFemtecTesterSettings">
+   <property name="text">
+    <string>Settings</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
@@ -628,8 +695,8 @@
    <slot>setScrollBufferMaxLength(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>985</x>
-     <y>109</y>
+     <x>990</x>
+     <y>104</y>
     </hint>
     <hint type="destinationlabel">
      <x>803</x>
@@ -644,8 +711,8 @@
    <slot>setErrorLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>293</y>
+     <x>991</x>
+     <y>365</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -660,8 +727,8 @@
    <slot>setWarningLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>318</y>
+     <x>991</x>
+     <y>380</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -676,8 +743,8 @@
    <slot>setInfoLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>343</y>
+     <x>991</x>
+     <y>425</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -692,8 +759,8 @@
    <slot>setStateMachineLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>368</y>
+     <x>991</x>
+     <y>450</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -708,8 +775,8 @@
    <slot>setSoapOutLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>418</y>
+     <x>991</x>
+     <y>500</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -724,8 +791,8 @@
    <slot>setSoapInLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>393</y>
+     <x>991</x>
+     <y>475</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -740,8 +807,8 @@
    <slot>setDebugLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>443</y>
+     <x>991</x>
+     <y>525</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -756,8 +823,8 @@
    <slot>setNonCalLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>468</y>
+     <x>991</x>
+     <y>550</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -788,12 +855,12 @@
    <slot>click()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>530</y>
+     <x>991</x>
+     <y>748</y>
     </hint>
     <hint type="destinationlabel">
-     <x>986</x>
-     <y>558</y>
+     <x>990</x>
+     <y>778</y>
     </hint>
    </hints>
   </connection>
@@ -804,8 +871,8 @@
    <slot>clearAllMarkers()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>916</x>
-     <y>558</y>
+     <x>917</x>
+     <y>778</y>
     </hint>
     <hint type="destinationlabel">
      <x>806</x>
@@ -825,7 +892,7 @@
     </hint>
     <hint type="destinationlabel">
      <x>630</x>
-     <y>634</y>
+     <y>814</y>
     </hint>
    </hints>
   </connection>
@@ -836,8 +903,8 @@
    <slot>setInscriptFwFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>915</x>
-     <y>409</y>
+     <x>991</x>
+     <y>611</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
@@ -852,8 +919,8 @@
    <slot>setCalFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>915</x>
-     <y>455</y>
+     <x>991</x>
+     <y>661</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
@@ -868,8 +935,8 @@
    <slot>setKernelFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>915</x>
-     <y>432</y>
+     <x>991</x>
+     <y>636</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
@@ -884,12 +951,60 @@
    <slot>setOtherFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>915</x>
-     <y>478</y>
+     <x>991</x>
+     <y>686</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
      <y>343</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cbTesterEnabled</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>pbProcedureFS</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>871</x>
+     <y>208</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>871</x>
+     <y>191</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionFemtecTesterEnabled</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>cbTesterEnabled</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>916</x>
+     <y>210</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cbTesterEnabled</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>actionFemtecTesterEnabled</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>916</x>
+     <y>210</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
     </hint>
    </hints>
   </connection>
