add general settings page and auto connect

--- a/icons.qrc
+++ b/icons.qrc
@@ -21,5 +21,6 @@
         <file alias="next.png">icons/Pyconic-Free/PNG/011-2.png</file>
         <file alias="prev.png">icons/Pyconic-Free/PNG/011-1.png</file>
         <file alias="test.png">icons/femtec_tester.png</file>
+        <file alias="logviewer.png">icons/logviewer-64.png</file>
     </qresource>
 </RCC>
