--- a/misc/settingsdialog.ui
+++ b/misc/settingsdialog.ui
@@ -24,6 +24,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QListWidget" name="lwContent">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
          <width>128</width>
