--- a/misc/settingsdialog.ui
+++ b/misc/settingsdialog.ui
@@ -24,6 +24,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QListWidget" name="lwContent">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>100</width>
@@ -32,7 +38,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>128</width>
+         <width>100</width>
          <height>16777215</height>
         </size>
        </property>
