--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -199,6 +199,13 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_6">
          <item>
+          <widget class="QCheckBox" name="cbTesterEnabled">
+           <property name="text">
+            <string>Enable Femto&amp;Tester</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="pbProcedureFS">
            <property name="enabled">
             <bool>false</bool>
@@ -218,11 +225,50 @@
           </widget>
          </item>
          <item>
-          <widget class="QCheckBox" name="cbTesterEnabled">
-           <property name="text">
-            <string>Enable Femto&amp;Tester</string>
-           </property>
-          </widget>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <widget class="QPushButton" name="pbUnDock">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="icons.qrc">
+               <normaloff>:/icons/dock_undock.png</normaloff>:/icons/dock_undock.png</iconset>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pbDockDown">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="icons.qrc">
+               <normaloff>:/icons/dock_down.png</normaloff>:/icons/dock_down.png</iconset>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pbDockUp">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="icons.qrc">
+               <normaloff>:/icons/dock_up.png</normaloff>:/icons/dock_up.png</iconset>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </widget>
@@ -671,7 +717,7 @@
     <string>Query Arges Firmware Status</string>
    </property>
   </action>
-  <action name="actionFemtecTesterEnabled">
+  <action name="actionFemtoTesterEnabled">
    <property name="checkable">
     <bool>true</bool>
    </property>
@@ -768,7 +814,9 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>cbFilterError</sender>
@@ -777,8 +825,8 @@
    <slot>setErrorLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>347</y>
+     <x>1154</x>
+     <y>376</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -793,8 +841,8 @@
    <slot>setWarningLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>372</y>
+     <x>1154</x>
+     <y>401</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -809,8 +857,8 @@
    <slot>setInfoLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>397</y>
+     <x>1154</x>
+     <y>426</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -825,8 +873,8 @@
    <slot>setStateMachineLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>422</y>
+     <x>1154</x>
+     <y>451</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -841,8 +889,8 @@
    <slot>setSoapOutLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>472</y>
+     <x>1154</x>
+     <y>501</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -857,8 +905,8 @@
    <slot>setSoapInLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>447</y>
+     <x>1154</x>
+     <y>476</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -873,8 +921,8 @@
    <slot>setDebugLevelVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>497</y>
+     <x>1154</x>
+     <y>526</y>
     </hint>
     <hint type="destinationlabel">
      <x>810</x>
@@ -910,7 +958,7 @@
     </hint>
     <hint type="destinationlabel">
      <x>630</x>
-     <y>918</y>
+     <y>840</y>
     </hint>
    </hints>
   </connection>
@@ -921,8 +969,8 @@
    <slot>setInscriptFwFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>558</y>
+     <x>1154</x>
+     <y>587</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
@@ -937,8 +985,8 @@
    <slot>setCalFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>608</y>
+     <x>1154</x>
+     <y>637</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
@@ -953,8 +1001,8 @@
    <slot>setKernelFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>583</y>
+     <x>1154</x>
+     <y>612</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
@@ -969,8 +1017,8 @@
    <slot>setOtherFacilityVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>633</y>
+     <x>1154</x>
+     <y>662</y>
     </hint>
     <hint type="destinationlabel">
      <x>413</x>
@@ -985,17 +1033,17 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>192</y>
+     <x>1154</x>
+     <y>163</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1052</x>
-     <y>167</y>
+     <x>1154</x>
+     <y>190</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>actionFemtecTesterEnabled</sender>
+   <sender>actionFemtoTesterEnabled</sender>
    <signal>toggled(bool)</signal>
    <receiver>cbTesterEnabled</receiver>
    <slot>setChecked(bool)</slot>
@@ -1005,20 +1053,20 @@
      <y>-1</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1052</x>
-     <y>192</y>
+     <x>1154</x>
+     <y>163</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>cbTesterEnabled</sender>
    <signal>clicked(bool)</signal>
-   <receiver>actionFemtecTesterEnabled</receiver>
+   <receiver>actionFemtoTesterEnabled</receiver>
    <slot>setChecked(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1052</x>
-     <y>192</y>
+     <x>1154</x>
+     <y>163</y>
     </hint>
     <hint type="destinationlabel">
      <x>-1</x>
@@ -1167,6 +1215,54 @@
     <hint type="destinationlabel">
      <x>583</x>
      <y>420</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cbTesterEnabled</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>pbUnDock</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1014</x>
+     <y>158</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1019</x>
+     <y>207</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cbTesterEnabled</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>pbDockDown</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1059</x>
+     <y>149</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1082</x>
+     <y>205</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cbTesterEnabled</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>pbDockUp</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1124</x>
+     <y>155</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1128</x>
+     <y>204</y>
     </hint>
    </hints>
   </connection>
