--- a/test/docksettingspage.ui
+++ b/test/docksettingspage.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>625</width>
-    <height>423</height>
+    <width>493</width>
+    <height>435</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dock</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
@@ -175,93 +175,49 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_5">
+    <layout class="QHBoxLayout" name="horizontalLayout_7">
      <item>
-      <widget class="QGroupBox" name="gbAutoDock">
+      <widget class="QGroupBox" name="gbSlots">
        <property name="title">
-        <string>Auto Docking</string>
+        <string>Docking Slots</string>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
+       <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QCheckBox" name="cbAutoDock">
-          <property name="text">
-           <string>AutoDock when treatment is selected in GUI</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="cbAutoUndock">
-          <property name="text">
-           <string>AutoUndock when treatment is finished/aborted</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QLabel" name="lDockingMode">
+           <widget class="QLabel" name="lSlotCount">
             <property name="text">
-             <string>Docking Mode</string>
+             <string>Number Slots</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="rbRegularDocking">
-            <property name="text">
-             <string>Regular</string>
+           <widget class="QSpinBox" name="sbSlotCount">
+            <property name="minimum">
+             <number>1</number>
             </property>
-            <property name="checked">
-             <bool>true</bool>
+            <property name="maximum">
+             <number>20</number>
             </property>
-            <attribute name="buttonGroup">
-             <string notr="true">bgDockingMode</string>
-            </attribute>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="rbSoftDocking">
-            <property name="text">
-             <string>Soft</string>
+            <property name="value">
+             <number>1</number>
             </property>
-            <attribute name="buttonGroup">
-             <string notr="true">bgDockingMode</string>
-            </attribute>
            </widget>
           </item>
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
-           <widget class="QPushButton" name="pbBottom">
-            <property name="text">
-             <string>Bottom</string>
-            </property>
-            <property name="icon">
-             <iconset resource="../icons.qrc">
-              <normaloff>:/icons/dock_bottom.png</normaloff>:/icons/dock_bottom.png</iconset>
-            </property>
-           </widget>
+           <widget class="QComboBox" name="cbSlot"/>
           </item>
           <item>
-           <widget class="QPushButton" name="pbUndock">
-            <property name="text">
-             <string>Undock</string>
+           <widget class="QSpinBox" name="sbSlotPos">
+            <property name="minimum">
+             <number>-127</number>
             </property>
-            <property name="icon">
-             <iconset resource="../icons.qrc">
-              <normaloff>:/icons/dock_undock.png</normaloff>:/icons/dock_undock.png</iconset>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pbDock">
-            <property name="text">
-             <string>Dock</string>
-            </property>
-            <property name="icon">
-             <iconset resource="../icons.qrc">
-              <normaloff>:/icons/dock_dock.png</normaloff>:/icons/dock_dock.png</iconset>
+            <property name="maximum">
+             <number>127</number>
             </property>
            </widget>
           </item>
@@ -279,7 +235,7 @@
         <item>
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="1">
-           <widget class="QLabel" name="lDMS">
+           <widget class="QLabel" name="lZForce">
             <property name="font">
              <font>
               <weight>75</weight>
@@ -292,7 +248,7 @@
            </widget>
           </item>
           <item row="0" column="0">
-           <widget class="QLabel" name="lDMSDesc">
+           <widget class="QLabel" name="lZForceDesc">
             <property name="font">
              <font>
               <weight>75</weight>
@@ -300,7 +256,7 @@
              </font>
             </property>
             <property name="text">
-             <string>DMS (raw value):</string>
+             <string>Z-Force:</string>
             </property>
            </widget>
           </item>
@@ -350,6 +306,107 @@
     </layout>
    </item>
    <item>
+    <widget class="QGroupBox" name="gbAutoDock">
+     <property name="title">
+      <string>Auto Docking</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QCheckBox" name="cbAutoDock">
+        <property name="text">
+         <string>AutoDock when treatment is selected in GUI</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="cbAutoUndock">
+        <property name="text">
+         <string>AutoUndock when treatment is finished/aborted</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="cbAutoSlotSelect">
+        <property name="text">
+         <string>Select next docking slot when treatment is finshed/aborted</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="lDockingMode">
+          <property name="text">
+           <string>Docking Mode</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="rbRegularDocking">
+          <property name="text">
+           <string>Regular</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">bgDockingMode</string>
+          </attribute>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="rbSoftDocking">
+          <property name="text">
+           <string>Soft</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">bgDockingMode</string>
+          </attribute>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QPushButton" name="pbBottom">
+          <property name="text">
+           <string>Bottom</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../icons.qrc">
+            <normaloff>:/icons/dock_bottom.png</normaloff>:/icons/dock_bottom.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbUndock">
+          <property name="text">
+           <string>Undock</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../icons.qrc">
+            <normaloff>:/icons/dock_undock.png</normaloff>:/icons/dock_undock.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pbDock">
+          <property name="text">
+           <string>Dock</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../icons.qrc">
+            <normaloff>:/icons/dock_dock.png</normaloff>:/icons/dock_dock.png</iconset>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -357,7 +414,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>168</height>
+       <height>40</height>
       </size>
      </property>
     </spacer>
